изменены стили элементов страниц

--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -16,7 +16,7 @@
         <h1>Магазин</h1>
       </div>
       <ul class="nav-links">
-        <li><a href="/app/static">Главная</a></li>
+        <li><a href="/">Гcлавная</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +42,7 @@
       </div>
     </section>
 
-    <a href="/app/static" class="back-link">← Назад к категориям</a>
+    <a href="/" class="back-link">← Назад к категориям</a>
   </main>
 
   <footer>
