--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,9 +16,13 @@
         <h1>Магазин</h1>
       </div>
       <ul class="nav-links">
-        <li><a href="/app/static">Главная</a></li>
-        <!-- Можно добавить дополнительные пункты меню -->
+        <li><a href="/">Главная</a></li>
+
       </ul>
+      <div class="auth-buttons">
+        <a href="/login" class="auth-btn login-btn">Войти</a>
+        <a href="/register" class="auth-btn register-btn">Регистрация</a>
+      </div>
     </nav>
   </header>
 
